test_suite/tests/ui/fail_unions.stderr
error: Unions not supported
 --> tests/ui/fail_unions.rs:5:1
  |
5 | / #[repr(C)]
6 | | union Commonwealth {
7 | |     a: u8,
8 | |     b: f32,
9 | | }
  | |_^

error[E0277]: the trait bound `Commonwealth: TypeInfo` is not satisfied
  --> tests/ui/fail_unions.rs:14:24
   |
14 |     assert_type_info::<Commonwealth>();
   |                        ^^^^^^^^^^^^ the trait `TypeInfo` is not implemented for `Commonwealth`
   |
   = help: the following other types implement trait `TypeInfo`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and 53 others
note: required by a bound in `assert_type_info`
  --> tests/ui/fail_unions.rs:11:24
   |
11 | fn assert_type_info<T: TypeInfo + 'static>() {}
   |                        ^^^^^^^^ required by this bound in `assert_type_info`
